# catplotlib

./: CMakeLists.txt  README.md
examples/: simple.cpp  test_numbits.cpp
include/catplot/: axes.hpp  catplot.hpp  figure.hpp
numbits/: CMakeLists.txt
numbits/examples/: CMakeLists.txt  example_basic.cpp  example_broadcasting.cpp  example_linear_algebra.cpp  example_math.cpp
numbits/include/numbits/: broadcasting.hpp  indexing.hpp  io.hpp  linear_algebra.hpp  math_functions.hpp  ndarray.hpp  ndarray_manipulation.hpp  numbits.hpp  operations.hpp  random.hpp  types.hpp  utils.hpp
numbits/tests/: CMakeLists.txt  test_array.cpp  test_linear_algebra.cpp  test_operations.cpp
src/: axes.cpp  figure.cpp  svg_backend.cpp  svg_backend.hpp  svg_canvas.cpp  svg_canvas.hpp
